Revert to using Temml in Firefox

--- a/preview/index.html
+++ b/preview/index.html
@@ -7,9 +7,11 @@
 <title>Hurmet.app</title>
 
 <link rel="stylesheet" href="../site/katex/katex.min.css">
+<link rel="stylesheet" href="../site/temml/temml.css">
 <link rel="stylesheet" href="../site/styles.min.css">
 
 <script src="../site/katex/katex.min.js"></script>
+<script src="../site/temml/temml.min.js"></script>
 <!--<script src="chart.min.js" async></script>-->
 <script src="hurmet.js"></script>
 </head>
