--- a/site/blank.html
+++ b/site/blank.html
@@ -7,9 +7,11 @@
 <title>Hurmet.app</title>
 
 <link rel="stylesheet" href="katex/katex.min.css">
+<link rel="stylesheet" href="temml/temml.css">
 <link rel="stylesheet" href="styles.min.css">
 
 <script src="katex/katex.min.js"></script>
+<script src="temml/temml.min.js"></script>
 <!--<script src="chart.min.js" async></script>-->
 <script src="hurmet.min.js"></script>
 </head>
