Move exchange rates to html file

--- a/preview/index.html
+++ b/preview/index.html
@@ -12,6 +12,7 @@
 
 <script src="../site/katex/katex.min.js"></script>
 <script src="../site/temml/temml.min.js"></script>
+<script>const currencyRates=Object.freeze(JSON.parse(`{"AUD":"1.5067","BRL":"5.3204","CAD":"1.3505","CHF":"1.0385","CNY":"7.0513","EUR":"1","GBP":"0.85115","HKD":"8.1522","ILS":"3.5586","INR":"80.4315","JPY":"133.91","KRW":"1330.83","MXN":"20.9880","RUB":"86.2815","USD":"1.0385"}`))</script>
 <!--<script src="chart.min.js" async></script>-->
 <script src="hurmet.js"></script>
 </head>
