--- a/site/index.html
+++ b/site/index.html
@@ -38,13 +38,32 @@
 
   <p>This is editable text. You can focus it and start typing. All calculations will update if you press <strong>Enter</strong> to close a calculation cell.</p>
   <p>This week’s example:</p>
-  <h3>Simple span beam</h3>
-  <p><span class="hurmet-calc" data-entry="L = 12 'feet'"></span>, length</p>
-  <p><span class="hurmet-calc" data-entry="w = 110 'lbf/ft'"></span>, uniform line load</p>
-  <p><span class="hurmet-calc" data-entry="P = 1000 'lbf'"></span>, mid-span point load</p>
-  <p><span class="hurmet-calc" data-entry="V = (w L)/2 + P/2 = ?? lbf"></span>, maximum shear</p>
-  <p><span class="hurmet-calc" data-entry="M = (w L^2)/8 + (P L)/4 = ?? lbf-ft"></span>, max bending moment</p>
-  
+  <h3>Cold Ball</h3>
+  <p>A friend asked me what would happen if he pressurized a <span class="hurmet-calc" data-entry="2 1/2′′"></span> hollow stainless steel ball to 50 psi and then cooled it with liquid nitrogen (-262 °F). Will it collapse? Let run the numbers.</p>
+  <p> <span class="hurmet-calc" data-entry="format = &quot;h3&quot;"></span>, round to 3 significant figures.</p>
+  <p>Ideal Gas Law</p>
+  <div class="indented">
+     <p><span class="hurmet-calc" data-entry="P V = n R T"></span></p>
+  </div>
+  <p><span class="hurmet-calc" data-entry="n"></span> and <span class="hurmet-calc" data-entry="R"></span> are the same both before and after the ball is cooled.  So treat them as a constant.</p>
+  <div class="indented">
+     <p><span class="hurmet-calc" data-entry="P V = k T"></span></p>
+  </div>
+  <p>Examine the ball at ambient temperature and calculate <span class="hurmet-calc" data-entry="k"></span></p>
+  <div class="indented">
+     <p><span class="hurmet-calc" data-entry="r = (1//2)(2.5 'in') = ?? in"></span>, radius</p>
+     <p><span class="hurmet-calc" data-entry="V = 4//3 π r³ = ?? in³"></span>, volume</p>
+     <p><span class="hurmet-calc" data-entry="T = 100 '°F' = ?? °K"></span>, ambient temperature, conservative</p>
+     <p><span class="hurmet-calc" data-entry="P = 50 'psig' = ?? psi"></span>, internal pressure of ball at starting (ambient) condition</p>
+     <p><span class="hurmet-calc" data-entry="k = (P V)/T = ?? lbf-in/°K"></span></p>
+  </div>
+  <p>Now find the cold condition</p>
+  <div class="indented">
+     <p><span class="hurmet-calc" data-entry="T_2 = -262 '°F' = ?? °K"></span></p>
+     <p><span class="hurmet-calc" data-entry="P = (k T_2)/V = ?? psi"></span>= <span class="hurmet-calc" data-entry="P = @@ psig"></span>, internal pressure when cold.</p>
+  </div>
+  <p>That’s greater than zero. When cold, it still has more internal pressure than atmospheric. It’s okay.</p>
+    
 </div> <!-- editor -->
 
 <div id="print-div" class="ProseMirror pica"></div>
