--- a/site/index.html
+++ b/site/index.html
@@ -110,6 +110,7 @@ Display:
 
 <div id="copyright">Copyright © 2020-2022 Ron Kok. Released under the <a href="https://opensource.org/licenses/MIT">MIT License</a></div>
 
+<script src="prosemirror.min.js"></script>
 <script>
   window.addEventListener('beforeunload', function (e) {
 	// If changes have been made, put up a dialog box to warn the user.
@@ -118,7 +119,18 @@ Display:
 	e.returnValue = ''
   })
 </script>
-<script src="prosemirror.min.js"></script>
+<script>
+   window.addEventListener('load', () => {
+     if ('serviceWorker' in navigator) {
+       navigator.serviceWorker.register('/sw.js').then(() => {
+         console.log('Service worker registered!');
+       })
+     }
+     if (navigator.serviceWorker.controller != null) {
+       navigator.serviceWorker.controller.postMessage({'command': 'trimCaches'});
+     }
+   });
+ </script>
   
 </body>
 </html>
