--- a/site/index.html
+++ b/site/index.html
@@ -6,6 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Hurmet.app</title>
 
+<script>if ("serviceWorker" in navigator && !navigator.serviceWorker.controller) { navigator.serviceWorker.register("./service-worker.js", { scope: "./" }) }</script>
 <link rel="stylesheet" href="katex/katex.min.css">
 <link rel="stylesheet" href="temml/temml.css">
 <link rel="stylesheet" href="styles.min.css">
@@ -120,11 +121,6 @@ Display:
 </script>
 <script>
    window.addEventListener('load', () => {
-     if ('serviceWorker' in navigator) {
-       navigator.serviceWorker.register('/sw.js').then(() => {
-         console.log('Service worker registered!');
-       })
-     }
      if (navigator.serviceWorker.controller != null) {
        navigator.serviceWorker.controller.postMessage({'command': 'trimCaches'});
      }
