Fix file name of service worker

--- a/site/index.html
+++ b/site/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Hurmet.app</title>
 
-<script>if ("serviceWorker" in navigator && !navigator.serviceWorker.controller) { navigator.serviceWorker.register("./service-worker.js", { scope: "./" }) }</script>
+<script>if ("serviceWorker" in navigator && !navigator.serviceWorker.controller) { navigator.serviceWorker.register("./sw.js", { scope: "./" }) }</script>
 <link rel="stylesheet" href="katex/katex.min.css">
 <link rel="stylesheet" href="temml/temml.css">
 <link rel="stylesheet" href="styles.min.css">
