--- a/site/index.html
+++ b/site/index.html
@@ -26,8 +26,8 @@
 <body>
 <nav>
    <ul>
-     <li><a href="./examples.html" target="_blank">Examples</a></li>
-     <li><a href="./docs/en/manual.html" target="_blank">Documentation</a></li>
+     <li><a href="https://hurmet.app/examples.html" target="_blank">Examples</a></li>
+     <li><a href="https://hurmet.app/docs/en/manual.html" target="_blank">Documentation</a></li>
      <li><a href="https://github.com/ronkok/Hurmet" target="_blank">GitHub</a></li>
    </ul>
 </nav>
