--- a/preview/index.html
+++ b/preview/index.html
@@ -6,12 +6,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Hurmet.app</title>
 
-<link rel="stylesheet" href="katex/katex.min.css">
-<link rel="stylesheet" href="temml/temml.css">
+<link rel="stylesheet" href="katex.min.css">
+<link rel="stylesheet" href="temml.css">
 <link rel="stylesheet" href="styles.min.css">
 
-<!--currency rates-->
-<script>const currencyRates=Object.freeze(JSON.parse(`{"AUD":"1.4995","BRL":"5.0959","CAD":"1.3661","CHF":"1.0258","CNY":"7.1831","EUR":"1","GBP":"0.84875","HKD":"8.4165","ILS":"3.5970","INR":"83.1915","JPY":"136.05","KRW":"1343.63","MXN":"21.1360","RUB":"86.2815","USD":"1.0722"}`))</script>
 </head>
 
 <body>
