Include temml.css in styles.css

--- a/site/examples.html
+++ b/site/examples.html
@@ -7,7 +7,6 @@
 <title>Hurmet Examples</title>
 
 <link rel="stylesheet" href="katex.min.css">
-<link rel="stylesheet" href="temml.css">
 <link rel="stylesheet" href="styles.min.css">
 
 </head>
@@ -66,7 +65,7 @@ Display:
 <p>This is a live text editor. You can click anywhere and start typing. The calculation cells are also live. You can click on one and edit it. They will all update if you close a calculation cell with <strong>Enter</strong>.</p>
 
 <h2>Calculations</h2>
-<p>To create a calculation, select a spot and type <strong>Alt+C</strong> or hit the <img src="https://hurmet.app/images/plus.svg" alt="Plus" width="" class="inline"> button. Write your calculation into the cell and write a  sign where the result should appear. Hit the <strong>Enter</strong> key and a completed calculation will appear, like these:</p>
+<p>To create a calculation, select a spot and type <strong>Alt+C</strong> or hit the <img src="https://hurmet.app/images/plus.svg" alt="Plus" width="" class="inline"> button. Write your calculation into the cell and write a “?” sign where the result should appear. Hit the <strong>Enter</strong> key and a completed calculation will appear, like these:</p>
 <p><span class="hurmet-calc" data-entry="1//8 × 0.375 × 13.5² = ?"></span></p>
 <p>You can assign a result to a variable:</p>
 <p><span class="hurmet-calc" data-entry="L = 24 + 17/2 = ?"></span></p>
