--- a/site/examples.html
+++ b/site/examples.html
@@ -120,7 +120,7 @@ Say that we want to build a cylindrical water tank in 5-foot courses.
 
 <h2>Remote Data</h2>
 <p>Such data can be stored in a remote file. Say that we want to engineer a steel end-plate connection. The calculation could begin by fetching a chunk of data about steel shapes and loading that data into a variable, like this:</p>
-<p><span class="hurmet-calc" data-entry="wideFlanges = fetch(&quot;https://hurmet.app/ce/AISC-v15-wideFlanges.csv&quot;) = !"></span></p>
+<p><span class="hurmet-calc" data-entry="wideFlanges = fetch(&quot;https://gist.githubusercontent.com/ronkok/a9f465e08be54cb4b46449768511acec/raw/AISC-v15-wideFlanges.csv&quot;) = !"></span></p>
 <p>From that, we can load data into variables for individual dimensions.</p>
 
 <h4>Beam properties<img src="images/EndPlateConnection.svg" alt="End Plate Connection" width="250" class="right">:</h4>
