Rearrange File menu. Add Page Size.

--- a/preview/index.html
+++ b/preview/index.html
@@ -8,7 +8,7 @@
 
 <link rel="stylesheet" href="katex.min.css">
 <link rel="stylesheet" href="styles.min.css">
-
+<style id="pageStyle">@media print {@page{size: letter; margin: 16mm 0.75in 16mm 0.75in;}}</style>
 </head>
 
 <body>
