--- a/site/index.html
+++ b/site/index.html
@@ -9,7 +9,7 @@
 <script>if ("serviceWorker" in navigator && !navigator.serviceWorker.controller) { navigator.serviceWorker.register("./sw.js") }</script>
 <link rel="stylesheet" href="katex.min.css">
 <link rel="stylesheet" href="styles.min.css">
-
+<style id="pageStyle">@media print {@page{size: letter; margin: 16mm 0.75in 16mm 0.75in;}}</style>
 </head>
 
 <body>
