Rearrange site to enable manual in local host.

--- a/site/examples.html
+++ b/site/examples.html
@@ -15,7 +15,7 @@
 <nav>
   <ul>
     <li><a href="https://hurmet.app" target="_blank">Home</a></li>
-    <li><a href="https://hurmet.app/docs/en/manual.html" target="_blank">Documentation</a></li>
+    <li><a href="https://hurmet.app/manual.html" target="_blank">Documentation</a></li>
     <li><a href="https://github.com/ronkok/Hurmet" target="_blank">GitHub</a></li>
   </ul>
 </nav>
