Enable export of GFM

--- a/preview/manual.html
+++ b/preview/manual.html
@@ -35,7 +35,8 @@
 <h3 id='table-of-contents'>Table of Contents</h3>
 <p>The <strong>ToC</strong> button creates a Table of Contents at the selection point. The table will be built from Headings in your document. In the ToC dialog box, you can choose which heading levels to include.</p>
 <h3 id='markdown'>Markdown</h3>
-<p>Using the <strong>M▾</strong> button, you can import or export files in <em>Markdown</em>, a lightweight markup format. Hurmet&#x27;s version of Markdown is extended to enable calculations, indented paragraphs, and tables with merged cells.</p>
+<p>In the <strong>File▾</strong> menu, you can import or export files in <em>Markdown</em>, a lightweight markup format. Hurmet&#x27;s version of Markdown is extended to enable calculations, indented paragraphs, centered paragraphs, and tables with merged cells or multiple paragraphs in a cell.</p>
+<p>…or you can export GFM (Github Flavored Markdown), which does not have Hurmet’s extensions and which converts calculation zones to TeX.</p>
 <details><summary>Click for more…</summary>
 <h4 id='hurmet-flavored-markdown'>Hurmet-flavored Markdown</h4>
 <p>Paragraphs and lists are preceded by a blank line.<br>A newline is indicated by a backslash, <code>\</code>, at the end of a line.</p>
