--- a/preview/index.html
+++ b/preview/index.html
@@ -7,7 +7,7 @@
 <title>Hurmet.app</title>
 
 <link rel="stylesheet" href="katex.min.css">
-<link rel="stylesheet" href="styles.min.css">
+<link rel="stylesheet" href="styles.css">
 <style id="pageStyle">@media print {@page{size: letter; margin: 16mm 0.75in 16mm 0.75in;}}</style>
 </head>
 
