Fix a manual bug

--- a/preview/manual.html
+++ b/preview/manual.html
@@ -517,7 +517,8 @@ a[5..]    # returns &quot;efg&quot;</code></pre><p><strong>Math String</strong><
 <tr><td> √ </td><td> <span class="tex" data-tex="\sqrt{}"></span> </td><td> Square root<br> auto-correct: sqrt</td></tr>
 <tr><td> <span class="tex" data-tex="\sqrt[3]{}"></span> </td><td> <span class="tex" data-tex="\sqrt[3]{8}"></span> </td><td> nth-root<br> auto-correct: root n</td></tr>
 <tr><td> ||  </td><td> <span class="tex" data-tex="\vert \text{-}4 \vert"></span>  </td><td> Absolute value of a scalar, determinant of  a matrix, or magnitude of a vector or a  complex number.</td></tr>
-<tr><td colspan="2"> ||  ||        | <span class="tex" data-tex="\ \Vert x \ \Vert"></span>                |   </td><td> <span class="tex" data-tex="\sqrt{x{_\text{1}}^{2}+ ⋯ + x{_\text{n}}^{2}}"></span> if the argument is  a vector of reals --------------------------------------------  <span class="tex" data-tex="\sqrt{∑_{i}∑_{j} A_{i ,\: j}^{2}}"></span> if the argument is  a 2-D matrix</td></tr>
+<tr><td rowspan="2"> ||  ||    </td><td rowspan="2"> <span class="tex" data-tex="\ \Vert x \ \Vert"></span>    </td><td> <span class="tex" data-tex="\sqrt{x{_\text{1}}^{2}+ ⋯ + x{_\text{n}}^{2}}"></span> if the argument is  a vector of reals</td></tr>
+<tr><td> <span class="tex" data-tex="\sqrt{∑_{i}∑_{j} A_{i ,\: j}^{2}}"></span> if the argument is  a 2-D matrix</td></tr>
 <tr><td> ⌊  ⌋ </td><td> <span class="tex" data-tex="\lfloor 4.5 \rfloor"></span> </td><td> Floor. Always rounds down.<br> auto-correct: floor</td></tr>
 <tr><td> ⌈  ⌉ </td><td> <span class="tex" data-tex="\lceil 4.5 \rceil"></span> </td><td> Ceiling. Always rounds up.<br> auto-correct: ceil</td></tr>
 <tr><td> %</td><td> <span class="tex" data-tex="10\%"></span></td><td> Percent</td></tr>
