Link to favicon

--- a/site/index.html
+++ b/site/index.html
@@ -5,6 +5,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Hurmet.app</title>
+<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 
 <script>if ("serviceWorker" in navigator && !navigator.serviceWorker.controller) { navigator.serviceWorker.register("./sw.js") }</script>
 <link rel="stylesheet" href="katex.min.css">
