--- a/site/examples.html
+++ b/site/examples.html
@@ -5,6 +5,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Hurmet Examples</title>
+<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 
 <link rel="stylesheet" href="katex.min.css">
 <link rel="stylesheet" href="styles.min.css">
