--- a/site/examples.html
+++ b/site/examples.html
@@ -193,6 +193,35 @@ end"></span></p>
 <p>… and now we’ll call the function and tell it to calculate the first ten terms of the series:</p>
 <p><span class="hurmet-calc" data-entry="format = &quot;h8&quot;"></span></p>
 <p><span class="hurmet-calc" data-entry="approximatePi = 2/viete(10) = ?"></span>, good to 6 significant digits. Not bad for ten terms.</p>
+
+<h2>Drawings</h2>
+
+<p>Hurmet’s <em>draw</em> environment enables function plotting. For instance, to get a sine wave, one can write the following code into a math zone:</p>
+
+<table class="nogrid">
+<tbody>
+<tr>
+<td data-colwidth="298"><pre><code>draw()
+  title("sin x")
+  frame(250, 150)
+  view(-5, 5, -3)
+  axes(2, 1, "labels")
+  strokewidth(2)
+  plot(sin(x), 51)
+  text([1.6, 1.35], "sin x")
+end</code></pre></td>
+<td><p><span class="hurmet-calc" data-entry="draw()
+  title(&quot;sin x&quot;)
+  frame(250, 150)
+  view(-5, 5)
+  axes(2, 1, &quot;labels&quot;)
+  strokewidth(2)
+  plot(sin(x), 51)
+  text([1.6, 1.35], &quot;sin x&quot;)
+end"></span></p></td>
+</tr>
+</tbody>
+</table>
 <p></p>
 </div> <!-- editor -->
 
