Remove parens from draw expressions

--- a/site/examples.html
+++ b/site/examples.html
@@ -201,23 +201,23 @@ end"></span></p>
 <table class="nogrid">
 <tbody>
 <tr>
-<td data-colwidth="298"><pre><code>draw()
-  title("sin x")
-  frame(250, 150)
-  view(-5, 5, -3)
-  axes(2, 1, "labels")
-  strokewidth(2)
-  plot(sin(x), 51)
-  text([1.6, 1.35], "sin x")
+  <td data-colwidth="298"><pre><code>draw()
+    title "sin x"
+    frame 250, 150
+    view -5, 5, -3
+    axes 2, 1, "labels"
+    strokewidth 2
+    plot sin(x), 51
+    text [1.6, 1.35], "sin x"
 end</code></pre></td>
-<td><p><span class="hurmet-calc" data-entry="draw()
-  title(&quot;sin x&quot;)
-  frame(250, 150)
-  view(-5, 5)
-  axes(2, 1, &quot;labels&quot;)
-  strokewidth(2)
-  plot(sin(x), 51)
-  text([1.6, 1.35], &quot;sin x&quot;)
+  <td><p><span class="hurmet-calc" data-entry="draw()
+    title &quot;sin x&quot;
+    frame 250, 150
+    view -5, 5, -3
+    axes 2, 1, &quot;labels&quot;
+    strokewidth 2
+    plot sin(x), 51
+    text [1.6, 1.35], &quot;sin x&quot;
 end"></span></p></td>
 </tr>
 </tbody>
