Support Markdown ~subscript~

--- a/preview/manual.html
+++ b/preview/manual.html
@@ -48,7 +48,7 @@
 <tr><td style="width: 392px">`inline code`</td><td style="width: 177px"><code>inline code</code></td></tr>
 <tr><td style="width: 392px">¢`2 + 2 = ?` </td><td style="width: 177px"><span class="tex" data-tex="2 + 2 = 4"></span><br>(calculation zone)</td></tr>
 <tr><td style="width: 392px">$ \TeX$</td><td style="width: 177px"><span class="tex" data-tex="\TeX"></span></td></tr>
-<tr><td style="width: 392px">~~strikethrough~~</td><td style="width: 177px"><del>strikethrough</del></td></tr>
+<tr><td style="width: 392px">~<sub>strikethrough~</sub></td><td style="width: 177px"><del>strikethrough</del></td></tr>
 <tr><td style="width: 392px"># Heading 1</td><td style="width: 177px"><strong>Heading 1</strong></td></tr>
 <tr><td style="width: 392px">## Heading 2</td><td style="width: 177px"><em>Heading 2</em></td></tr>
 <tr><td style="width: 392px">[Link](http://a.com)</td><td style="width: 177px"><a href='http://a.com'>Link</a></td></tr>
