Fix link to C image

--- a/preview/manual.html
+++ b/preview/manual.html
@@ -90,7 +90,7 @@ print &#x27;3&#x27;</code></pre></td></tr>
 <h2 id='tutorial'>Tutorial</h2>
 <dl class="bold-term">
 <dt id='create-a-cell'>Create a cell</dt>
-<dd><p>Hurmet calculation cells display math and perform numeric calculations. To create a calculation cell in  Hurmet.app, select a spot in the document, then click the <img alt="plus"> button or type <strong>Alt c</strong>.</p>
+<dd><p>Hurmet calculation cells display math and perform numeric calculations. To create a calculation cell in  Hurmet.app, select a spot in the document, then click the <img src="images/C.svg" alt="C"> button or type <strong>Alt c</strong>.</p>
 <p>While in a cell,<br>        <strong>Enter</strong> will close and update the cell.<br>        <strong>Shift-Enter</strong> will create a newline inside the cell.<br>        <strong>Esc</strong> will close the cell without updating it.<br>        Clicking elsewhere will also close the cell.</p>
 </dd>
 <div id="statement-container">
